corpus/addressing_modes.test
================================================================================
addressing modes
================================================================================


adc 42 ; absolute
adc #42 ; immediate
adc 42, x ; indexed x
adc 42, y ; indexed y
adc (42, x) ; indirect x
adc (42), y ; indirect y

adc (1 + 2) + 40, y
adc (1 + 2), y
adc ((6 * 7), x)




--------------------------------------------------------------------------------

(source_file
  (instruction
    mnemonic: (mnemonic)
    address: (absolute_address
      (decimal_literal)))
  (comment)
  (instruction
    mnemonic: (mnemonic)
    address: (immediate_mode
      (decimal_literal)))
  (comment)
  (instruction
    mnemonic: (mnemonic)
    address: (indexed_x
      (decimal_literal)
      (x)))
  (comment)
  (instruction
    mnemonic: (mnemonic)
    address: (indexed_y
      (decimal_literal)
      (y)))
  (comment)
  (instruction
    mnemonic: (mnemonic)
    address: (indirect_x
      (decimal_literal)
      (x)))
  (comment)
  (instruction
    mnemonic: (mnemonic)
    address: (indirect_y
      (decimal_literal)
      (y)))
  (comment)
  (instruction
    mnemonic: (mnemonic)
    address: (indexed_y
      (binary_expression
        left: (binary_expression
          left: (decimal_literal)
          operator: (binary_operator)
          right: (decimal_literal))
        operator: (binary_operator)
        right: (decimal_literal))
      (y)))
  (instruction
    mnemonic: (mnemonic)
    address: (indirect_y
      (binary_expression
        left: (decimal_literal)
        operator: (binary_operator)
        right: (decimal_literal))
      (y)))
  (instruction
    mnemonic: (mnemonic)
    address: (indirect_x
      (binary_expression
        left: (decimal_literal)
        operator: (binary_operator)
        right: (decimal_literal))
      (x))))
