corpus/expressions/unary.test
================================================================================
unary expressions
================================================================================

tree-sitter-expression-block-start

+1
-1
~1
<1
>1
!1
!!1
.not 1
.not .not 1
.bitnot 1
.lobyte 1
.hibyte 1
.bankbyte 1
tree-sitter-expression-block-end

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    operator: (plus)
    operand: (decimal_literal))
  (unary_expression
    operator: (minus)
    operand: (decimal_literal))
  (unary_expression
    operator: (tilde)
    operand: (decimal_literal))
  (unary_expression
    operator: (LT)
    operand: (decimal_literal))
  (unary_expression
    operator: (GT)
    operand: (decimal_literal))
  (unary_expression
    operator: (bang)
    operand: (decimal_literal))
  (unary_expression
    operator: (bang)
    operand: (unary_expression
      operator: (bang)
      operand: (decimal_literal)))
  (unary_expression
    operator: (dot_not)
    operand: (decimal_literal))
  (unary_expression
    operator: (dot_not)
    operand: (unary_expression
      operator: (dot_not)
      operand: (decimal_literal)))
  (unary_expression
    operator: (bitnot)
    operand: (decimal_literal))
  (unary_expression
    operator: (lobyte)
    operand: (decimal_literal))
  (unary_expression
    operator: (hibyte)
    operand: (decimal_literal))
  (unary_expression
    operator: (bankbyte)
    operand: (decimal_literal)))
