corpus/statements/assignment
================================================================================
Assignment Statement
================================================================================


foo = 3
foo = bar
foo::bar = 3
foo::bar = baz
foo::bar = baz::qux
three = 1 + 2
* = 1234
$ = 5678
var = $ + 2


--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    left: (identifier)
    right: (decimal_literal))
  (assignment_statement
    left: (identifier)
    right: (identifier))
  (assignment_statement
    left: (qualified_symbol
      (identifier)
      (identifier))
    right: (decimal_literal))
  (assignment_statement
    left: (qualified_symbol
      (identifier)
      (identifier))
    right: (identifier))
  (assignment_statement
    left: (qualified_symbol
      (identifier)
      (identifier))
    right: (qualified_symbol
      (identifier)
      (identifier)))
  (assignment_statement
    left: (identifier)
    right: (binary_expression
      left: (decimal_literal)
      operator: (plus)
      right: (decimal_literal)))
  (assignment_statement
    left: (star_PC)
    right: (decimal_literal))
  (assignment_statement
    left: (dollar_PC)
    right: (decimal_literal))
  (assignment_statement
    left: (identifier)
    right: (binary_expression
      left: 
        (dollar_PC)
      operator: (plus)
      right: (decimal_literal))))
